<resources>
    <string name="app_name">KindergartenThings</string>
    <string name="action_settings">Settings</string>
    <string name="loginTitle">Login</string>
    <string name="txtName">Child\'s Name:</string>
    <string name="txtEmail">Email:</string>
    <string name="btnLogin">Login</string>
    <string name="title_activity_output">OutputActivity</string>
    <string name="nmbrToGroupTitle">Enter the number of ladybugs you see</string>
    <string name="childs_name">[ChildsName]</string>
    <string name="dob">[ChildDOB]</string>
    <string name="parents_name">[ParentsName]</string>
    <array name="categories">
        <item>Expressive and Respective Languages</item>
        <item>Approach to Learning Cognition</item>
        <item>Mathematics</item>
        <item>Social/Emotional</item>
        <item>Physical Development</item>
    </array>
    <string name="fragmentArrangeNumberInstruction">Touch numbers in order from 1 to 5</string>
    <string name="title_activity_launch__screen">Launch_Screen</string>


    <string name="Dob">Date of birth</string>
    <string name="parentsName">Parents Name:</string>
    <string name="parentName">Parents Name</string>

    <string name="title_activity_math_questions">MathQuestionsActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
