<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingRight="5dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:columnCount="2"
    android:rowCount="6"
    android:stretchColumns="*"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.majorscreations.kindergartenthings.StartActivity"
    android:background="#bdbdbd"
    android:paddingLeft="5dp">
    <TableRow android:gravity="center"
        android:layout_margin="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/loginTitle"
            android:id="@+id/loginTitle"
            android:textSize="50dp"
            android:layout_span="2"
            android:textAlignment="center"
            android:layout_marginBottom="10dp" />
    </TableRow>

    <TableRow android:layout_margin="5dp" android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/txtName"
            android:layout_gravity="center_horizontal|right"
            android:id="@+id/txtName" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:id="@+id/getName"
            android:hint="Enter your child&apos;s name"
            android:background="#ffffff" />

    </TableRow>

    <TableRow android:layout_margin="5dp" android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/txtEmail"
            android:id="@+id/txtEmail"
            android:layout_gravity="center_horizontal|right"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:id="@+id/getEmail"
            android:layout_gravity="left"
            android:hint="Enter your Email"
            android:background="#ffffff" />
    </TableRow>

    <TableRow android:layout_margin="5dp" android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_gravity="center_horizontal|right"
            android:text="Date of Birth:"
            android:id="@+id/textView2"
          />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:layout_gravity="left"
            android:id="@+id/editTextdob"
            android:hint="DD/MM/YYYY"
            android:background="#ffffff" />

    </TableRow>

    <TableRow android:layout_margin="5dp" android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_gravity="center_horizontal|right"
            android:text="@string/parentsName"
            android:id="@+id/textView3"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editTextParentName"
            android:layout_gravity="left"
            android:hint="(Enter here)"
            android:imeOptions="actionDone"
            android:background="#ffffff" />
        </TableRow>

    <TableRow android:layout_marginTop="25dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_height="wrap_content"
            android:text="@string/btnLogin"
            android:id="@+id/btnLogin"
            android:layout_marginBottom="92dp"
            android:layout_span="2"
            android:layout_marginTop="50dp" />

    </TableRow>




</TableLayout>

